--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>float 예제</title>
 	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<style>
+	body{ background: black}
 	section,footer{width: 1000px; margin: auto; padding: 1em; background: black; margin-bottom: 2em;}
 	#title {font-size: 2em; height: 80px; color: white;  }
 	.wrap{width: 300px ; height:470px; background: #005752; float: left; margin: 1em ; }
